# cell-gc

./: Cargo.toml  LICENSE.txt  README.md  README.tpl  rustfmt.toml
cell-gc-derive/: Cargo.toml
cell-gc-derive/src/: lib.rs
lisp/: Cargo.toml
lisp/benches/: allocate_all_garbage.scm  allocate_no_garbage.scm  bench.rs  bench.sh  earley.scm  nboyer.scm
lisp/src/: builtins.rs  compile.rs  env.rs  lib.rs  main.rs  parse.rs  parser.rs  plain-prompt.rs  ports.rs  prelude.sch  prelude.scm  print.rs  protobj.rs  psyntax-support.scm  psyntax.pp  psyntax.ss  repl.rs  repl.scm  rustyline-prompt.rs  simple-expander.scm  syntax-case-support.sch  tests.rs  toplevel.rs  value.rs  vm.rs
lisp/tests/: begin.scm  booleans.lisp  bytevectors.scm  characters.lisp  characters.scm  closure.scm  cons.lisp  continuations.lisp  continuations.scm  control.lisp  control.scm  define.lisp  define.scm  double.lisp  equivalence.lisp  equivalence.scm  eval.scm  exceptions.scm  extensions.scm  numerical.scm  pairs_and_lists.lisp  pairs_and_lists.scm  primitive.lisp  print.lisp  r5rs_pitfall.scm  set.scm  symbols.scm  tail_calls.lisp  tests.rs  vectors.lisp  vectors.scm  y_combinator.scm  y_combinator_2.lisp  y_combinator_2.scm
src/: collections.rs  gc_leaf.rs  gc_ref.rs  gcleaf.rs  gcref.rs  heap.rs  lib.rs  macros.rs  marking.rs  pages.rs  poison.rs  ptr.rs  refs.rs  signposts.rs  ssb.rs  test.rs  traits.rs  type_hash.rs
tests/: cycle.rs  cyclic_garbage.rs  cyclic_garbage_force.rs  drop.rs  drop_box.rs  frozen_refs.rs  full_heap.rs  gc_leaf.rs  leaks.rs  lisp.rs  nearly_full_heap.rs  pairs.rs  pointer_equality.rs  reachable_objects_not_collected.rs  root_is_not_recycled.rs  root_self_references.rs  run-compile-tests.rs  size_big.rs  size_medium.rs  size_tiny.rs  size_zero.rs  str.rs  struct_enum.rs  test.rs  toy_vm.rs  tuple_enum.rs  vec_ref.rs
tests/aux/: mod.rs  pairs.rs
tests/compile-fail/: box_lifetime.rs  cross-heap-edge-alloc-2.rs  cross_heap_edge_alloc.rs  heap_drop.rs  heap_drop_2.rs  heap_lifetime_return.rs  heap_lifetime_swap.rs  heap_send.rs  pairs_aux.rs  private_fields.rs  ref_lifetime_assign.rs  ref_lifetime_return.rs
tests/run-pass/: cycle.rs  cyclic_garbage.rs  drop.rs  drop_box.rs  full_heap.rs  nearly_full_heap.rs  pairs.rs  pairs_aux.rs  pointer_equality.rs  reachable_objects_not_collected.rs  readme_example.rs  root_is_not_recycled.rs  root_self_references.rs  size_big.rs  size_medium.rs  size_tiny.rs  size_zero.rs  str.rs  struct_enum.rs  toy_vm.rs  tuple_enum.rs
