[package]
name = "cell-gc"
description = "A fun garbage collector for that virtual machine you're writing in Rust"
repository = "https://github.com/jorendorff/cell-gc/"
license = "MIT"
version = "0.2.1"
authors = [
    "Jason Orendorff <jason.orendorff@gmail.com>",
    "Nick Fitzgerald <fitzgen@gmail.com>",
]

[dependencies]
bit-vec = "0.4"
cell-gc-derive = { path = "cell-gc-derive", version = "0.2.1" }

[dev-dependencies]
compiletest_rs = "0.2"

