[package]
name = "cell-gc-derive"
description = "Custom derive support for cell-gc."
repository = "https://github.com/jorendorff/cell-gc/"
license = "MIT"
version = "0.2.1"
authors = [
    "Jason Orendorff <jason.orendorff@gmail.com>",
    "Nick Fitzgerald <fitzgen@gmail.com>",
]
workspace = ".."

[lib]
proc_macro = true

[dependencies]
syn = { version = "0.11.4", features = ["aster", "visit"] }
quote = "0.3.12"
