[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
name = "lisp"
version = "0.1.0"
workspace = ".."

[features]
default = ["repl-edit"]

# Provide interactive editing and history in the lisp REPL.
repl-edit = ["rustyline"]

[dependencies]
nom = { git = "https://github.com/Geal/nom", branch = "master" }
lazy_static = "0.2.8"
error-chain = "0.10"
rustyline = { optional = true, version = "1.0.0" }

[dependencies.cell-gc]
path = ".."

[dependencies.cell-gc-derive]
path = "../cell-gc-derive"

